refactor: update themes

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,10 +1,14 @@
 // Color palette
-$primary-dark-color: #e68e27;
-$primary-color: #e9ae30;
-$neutral-color: #ffffff;
+$primary-color: #ffcb47;
+
+$secondary-darker: #202020;
+$secondary-dark: #8d8d8d;
+$secondary-color: #c4c4c4;
+$secondary-light-color: #ffffff;
 
 // Text fonts
-$primary-font: "Roboto";
+$primary-font: "Montserrat";
+$secondary-font: "Elsie Swash Caps";
 $default-font: sans-serif;
 
 // Breakpoints
