fix: rename theme color

--- a/src/components/TitleBox/styles.module.scss
+++ b/src/components/TitleBox/styles.module.scss
@@ -10,12 +10,12 @@
 }
 
 .title {
-  color: $secondary-darker;
+  color: $secondary-darker-color;
   font-family: $secondary-font;
   font-size: 82px;
 }
 
 .subtitle {
-  color: $secondary-dark;
+  color: $secondary-dark-color;
   font-size: 22px;
 }
