--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,8 +1,8 @@
 // Color palette
 $primary-color: #ffcb47;
 
-$secondary-darker: #202020;
-$secondary-dark: #8d8d8d;
+$secondary-darker-color: #202020;
+$secondary-dark-color: #8d8d8d;
 $secondary-color: #c4c4c4;
 $secondary-light-color: #ffffff;
 
