--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -25,15 +25,15 @@
 
 .link {
   border-radius: 0.25rem;
-  color: $secondary-darker;
+  color: $secondary-darker-color;
   padding: 0.1rem;
   transition: box-shadow 0.15s, color 0.15s;
 
   &:focus-visible {
-    box-shadow: 0 0 0 0.25rem $secondary-dark;
+    box-shadow: 0 0 0 0.25rem $secondary-dark-color;
   }
 
   &:hover {
-    color: $secondary-dark;
+    color: $secondary-dark-color;
   }
 }
