--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,7 +3,7 @@ $primary-color: #ffcb47;
 
 $secondary-darker-color: #202020;
 $secondary-dark-color: #8d8d8d;
-$secondary-color: #c4c4c4;
+$secondary-color: #f0f0f0;
 $secondary-light-color: #ffffff;
 
 // Text fonts
