refactor: update TitleBox styles

--- a/src/components/TitleBox/styles.module.scss
+++ b/src/components/TitleBox/styles.module.scss
@@ -12,10 +12,11 @@
 .title {
   color: $secondary-darker-color;
   font-family: $secondary-font;
-  font-size: 82px;
+  font-size: 5.125rem;
 }
 
 .subtitle {
   color: $secondary-dark-color;
-  font-size: 22px;
+  font-size: 1.375rem;
+  font-weight: 600;
 }
