--- a/src/components/PlantCard/styles.module.scss
+++ b/src/components/PlantCard/styles.module.scss
@@ -33,12 +33,16 @@
 }
 
 .button {
+  @include accessibility(get-color(primary, normal));
+
   background-color: transparent;
   color: get-color(primary, normal);
   cursor: pointer;
   display: flex;
+  font-size: 1rem;
   font-weight: 600;
   gap: 1rem;
+  width: auto;
 
   &::after {
     content: url("../../../public/assets/icons/right_arrow.svg");
